@@ -4,7 +4,7 @@ __nav_buttons__([download])
 
 <div id="content">
 
-  GNU Octave 3.6.2 was released May 31, 2012.
+  GNU Octave 3.6.4 was released February 21, 2013.
 
   <h1>GNU/Linux systems</h1>
   <p>
